--- a/styles.css
+++ b/styles.css
@@ -5,19 +5,28 @@
 }
 
 body {
+    font-family: Helvetica, Arial, sans-serif;
     height: 100vh;
     margin: 0;
     display: flex;
 }
 
+
+label {
+    display: block;
+    font-size: 12px;
+    font-weight: bold;
+    color: #27313fff;
+}
+
+input {
+    width: 240px;
+    height: 25px;
+}
+
 .left-section {
     background-color: greenyellow;
     width: 35%;
-}
-
-.right-section {
-    width: 65%;
-    background-color: #f9fafbff;
 }
 
 .logo-container {    
@@ -47,4 +56,62 @@ body {
 img#logo {
     height: 90%;
     width: auto;
+}
+
+.right-section {
+    width: 65%;
+    background-color: #f9fafbff;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+}
+
+.text {
+    font-size: 24px;
+    font-weight: bold;
+    padding-left: 50px;
+    width: 75%;
+}
+
+.inputs {
+    background-color: white;
+    padding: 20px 50px 20px 50px;
+    box-shadow: 0px 7px 10px -5px rgba(0,0,0,0.17);
+    ;
+}
+
+.inputs > p {
+    color: #27313fff;
+    font-size: 24px;
+    font-weight: bold;
+    margin-top: 0;
+    /* padding-top: 20px; */
+}
+
+.form-row {
+    display: flex;
+    gap: 70px;
+    margin-bottom: 20px;
+}
+
+form button {
+    margin-left: 50px;
+    margin-top: 40px;
+
+    border: none;
+    border-radius: 8px;
+
+    background-color: #596d48ff;
+    color: white;
+
+    font-size: 16px;
+    font-weight: bold;
+
+    width: 200px;
+    height: 50px;
+}
+
+.have-account {
+    padding-left: 50px;
+    font-size: 18px;
 }
