--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,6 @@ body {
     display: flex;
 }
 
-
 label {
     display: block;
     font-size: 12px;
@@ -22,10 +21,23 @@ label {
 input {
     width: 240px;
     height: 25px;
+    border: 1.5px solid #E5E7EB;
+    border-radius: 4px;
+    outline: none;
+}
+
+input:focus {
+    border-color: rgb(37, 97, 250);
+    box-shadow: 0px 7px 10px -5px rgba(0,0,0,0.17);
+}
+
+a {
+    text-decoration: none;
+    color: #596D48;
 }
 
 .left-section {
-    background-color: greenyellow;
+    background-color: rgb(56, 131, 19);
     width: 35%;
 }
 
@@ -77,7 +89,6 @@ img#logo {
     background-color: white;
     padding: 20px 50px 20px 50px;
     box-shadow: 0px 7px 10px -5px rgba(0,0,0,0.17);
-    ;
 }
 
 .inputs > p {
